# py-trader-v2

./: .gitignore  README.md  event_trade.py  line.py  listed_and_buy.py  listed_and_long.py  listed_long.py  pyproject.toml  rebalance_entry.py  test.py  tweet_long.py
ftx/: ftx.py  read_orderbook.py  sample.py
setting/: config.ini  listed_and_long.ini  settting.py  tweet_long.ini
src/: async-sample.py  bot_base_error.py  bot_sample.py  catch_miss_price.py  catch_miss_price_V2.py  forever.py  ftx_bot_base.py  listed_and_long.py  listing_barrage.py  logger.py  rebalance_entry.py  rest_sample.py  sample.py  test.py  tweet_long.py  tweet_long_V2.py
src/ftx/: ftx.py  sample.py  ws_orderbook_sample.py
src/rebalance_entry_strategy/: taker01.py
src/setting/: bot_sample.ini  catch_miss_price.ini  catch_miss_price_cbse.ini  doge_tweet_long.ini  ftx_bot_base.ini  ieo_tweet_long.ini  listed_and_long.ini  listing_barrage.ini  rebalance_entry.ini  rest_sample.ini  settting.py  template.ini  tweet_long.ini  tweet_long_V2.ini  tweet_long_ieo.ini
src/twitter/: recent_research.py  timeline.py  wrapper.py
twitter/: recent_research.py
