[tool.poetry]
name = "py-trader"
version = "0.1.0"
description = ""
authors = ["bakuchi- <helveticaf0015se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
